GFAL 2.0 RELEASE-NOTE:



2.0.0-0.8 :
- big improvement on the gridftp support
- split the headers files properly
- remove the carriage return from the gridftp error messages
- add plugin dedicaded API.


2.0.0-0.7 :
- major improvement for third party transfer
- initial gridftp support
- begin to swithc to configuration without env var

2.0.0-0.6 :
- initial tagged release