@@ -115,14 +115,5 @@ void gfal_set_default_storageG(gfal_srmv2_opt* opts, enum gfal_srm_proto proto);
 
 int gfal_srm_convert_filestatuses_to_GError(struct srmv2_filestatus* statuses, int n, GError** err);
 
-
-					
-
-
-
-
-
-
-
-
+int gfal_surl_checker(plugin_handle ch, const char* surl, GError** err);
 
