@@ -7,11 +7,13 @@ SET(srm_prefix_dpm "srm://cvitbdpm1.cern.ch/dpm/cern.ch/home/dteam/gfal2-tests")
 SET(srm_valid_dpm_stat "${srm_prefix_dpm}/testread0011")
 SET(srm_valid_dpm_chmod "${srm_prefix_dpm}/test_change_right")
 SET(srm_valid_dir_root "${srm_prefix_dpm}")
+SET(srm_valid_dpm_src_file "${srm_valid_dpm_stat}")
 
 SET(srm_prefix_dcache "srm://cork.desy.de:8443/srm/managerv2?SFN=/pnfs/desy.de/data/dteam/testgfal2")
 SET(srm_valid_dcache_stat "${srm_prefix_dcache}/testread0011")
 SET(srm_valid_dcache_chmod "${srm_prefix_dcache}/test_change_right")
 SET(srm_valid_dcache_dir_root "${srm_prefix_dcache}")
+SET(srm_valid_dcache_src_file "${srm_valid_dcache_stat}")
 
 #SET(srm_prefix_EOS "srm://srm.pic.es/pnfs/pic.es/data/dteam")
 #SET(srm_valid_EOS_stat "${srm_prefix_castor}/testread0011")
@@ -105,4 +107,8 @@ ENDIF(PLUGIN_GRIDFTP)
 
 IF (MAIN_TRANSFER)
 	copy_file_test_full("GRIDFTP_DPM"  ${gsiftp_valid_dpm_src_file} ${gsiftp_prefix_dpm})	
+	copy_file_test_full("SRM_DPM"  ${srm_valid_dpm_src_file} ${srm_valid_dir_root})
+	copy_file_test_full("SRM_DCACHE"  ${srm_valid_dcache_src_file} ${srm_valid_dcache_dir_root})
+	copy_file_test_full("SRM_TO_GRIDFTP"  ${srm_valid_dpm_src_file} ${gsiftp_prefix_dpm})
+	copy_file_test_full("GRIDFTP_TO_SRM"  ${gsiftp_valid_dpm_src_file} ${srm_valid_dir_root})	
 ENDIF (MAIN_TRANSFER)
